--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-         <link rel="icon" href="https://banner2.cleanpng.com/20190212/rfl/kisspng-portable-network-graphics-computer-icons-scalable-security-svg-png-icon-free-download-193417-on-5c632dd3a0a140.453975411550003667658.jpg" >
+         <link rel="icon" type="image/jpg" href="https://static.vecteezy.com/system/resources/previews/003/184/374/original/cybersecurity-icon-online-data-protection-symbol-vector.jpg">
     </head>
     <body id="page-top">
         <!-- Navigation-->
