--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=max, shrink-to-fit=no">
 <meta name="description" content="Descripción de tu sitio web">
-<meta name="author" content="Autor del sitio web">
+<meta name="author" content="Autor del sitio web">	
 <title>Ciberseguridad</title>
 <link rel="icon" type="image/jpeg" href="https://static.vecteezy.com/system/resources/previews/003/184/374/original/cybersecurity-icon-online-data-protection-symbol-vector.jpg">
 <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
