--- a/index.html
+++ b/index.html
@@ -1,157 +1,156 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=max, shrink-to-fit=no">
-<meta name="description" content="Descripción de tu sitio web">
-<meta name="author" content="Autor del sitio web">	
-<title>Ciberseguridad</title>
-<link rel="icon" type="image/jpeg" href="https://static.vecteezy.com/system/resources/previews/003/184/374/original/cybersecurity-icon-online-data-protection-symbol-vector.jpg">
-<link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet">
-<link href="css/styles.css" rel="stylesheet">
-<script defer src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="description" content="Descripción de tu sitio web">
+    <meta name="author" content="Autor del sitio web">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ciberseguridad</title>
+    <link rel="icon" type="image/jpeg"
+        href="https://static.vecteezy.com/system/resources/previews/003/184/374/original/cybersecurity-icon-online-data-protection-symbol-vector.jpg">
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet">
+    <!-- Utilizamos las versiones CDN de Bootstrap y FontAwesome para aprovechar la caché del navegador -->
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js"
+        crossorigin="anonymous"></script>
+ <link href="css/styles.css" rel="stylesheet">
 </head>
+
 <body id="page-top">
-	<!-- Navigation-->
-	<nav class="navbar navbar-expand-lg navbar-light fixed-top"
-		id="mainNav">
-		<div class="container px-4 px-lg-5">
-			<a class="navbar-brand" href="#page-top">Ciber Seguridad</a>
-			<button class="navbar-toggler navbar-toggler-right" type="button"
-				data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-				aria-controls="navbarResponsive" aria-expanded="false"
-				aria-label="Toggle navigation">
-				Menu <i class="fas fa-bars"></i>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ms-auto">
-					<li class="nav-item"><a class="nav-link" href="#about">Empecemos</a></li>
-					<li class="nav-item"><a class="nav-link" href="#projects">Projecto</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<!-- Masthead-->
-	<header class="masthead">
-		<div
-			class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
-			<div class="d-flex justify-content-center">
-				<div class="text-center">
-					<h1 class="mx-auto my-0 text-uppercase">Ciberseguridad</h1>
-					<h2 class="text-white-50 mx-auto mt-2 mb-5"></h2>
-					<a class="btn btn-primary" href="#about">Empecemos</a>
-				</div>
-			</div>
-		</div>
-	</header>
-	<!-- About-->
-	<section class="about-section text-center" id="about">
-    <div class="container px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-lg-8">
-                <h2 class="text-white mb-4">¿Qué es la ciberseguridad?</h2>
-                <p class="text-white-50">
-                    La ciberseguridad es la práctica de proteger los sistemas
-                    informáticos, las redes y las aplicaciones de posibles ataques
-                    cibernéticos. Esto incluye la protección de datos, dispositivos y
-                    redes contra accesos no autorizados, robos de información y otros
-                    riesgos. La ciberseguridad también se conoce como seguridad
-                    informática o seguridad de la información.
-                </p>
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+        <div class="container px-4 px-lg-5">
+            <a class="navbar-brand" href="#page-top">Ciber Seguridad</a>
+            <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
+                Menu <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#about">Empecemos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Proyecto</a></li>
+                </ul>
             </div>
         </div>
-        <img class="img-fluid" src="startbootstrap-grayscale-gh-pages/assets/img/ciber.jpg" alt="ciberseguridad" loading="lazy" />
-        <br>
-        <br>
-    
-    </div>
-</section>
-	<!-- Projects-->
-<section class="projects-section bg-dark" id="projects">
-    <div class="container px-4 px-lg-5">
-        <!-- Featured Project Row-->
-        <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-            <div class="col-lg-6">
-                <img class="img-fluid rounded" src="startbootstrap-grayscale-gh-pages/assets/img/ciber4.jpg" alt="ciberseguridad" loading="lazy" />
+    </nav>
+    <!-- Masthead-->
+    <header class="masthead">
+        <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
+            <div class="d-flex justify-content-center">
+                <div class="text-center">
+                    <h1 class="mx-auto my-0 text-uppercase">Ciberseguridad</h1>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5"></h2>
+                    <a class="btn btn-primary" href="#about">Empecemos</a>
+                </div>
             </div>
-            <div class="col-lg-6">
-                <div class="bg-black text-center h-100 project">
-                    <div class="d-flex h-100">
-                        <div class="project-text w-100 my-auto text-center text-lg-left">
-                            <p class="text-white-50 mb-0">La ciberseguridad es fundamental en la era digital actual. Las empresas y las personas dependen cada vez más de la tecnología y la información en línea. Por lo tanto, proteger estos activos es esencial para garantizar la continuidad del negocio y la privacidad de los usuarios. La falta de seguridad y comprobar el correcto funcionamiento de las funciones miembro ciberseguridad puede resultar en pérdidas financieras, daños a la reputación y robos de información confidencial.</p>
-                        </div>
+        </div>
+    </header>
+    <section class="about-section text-center" id="about">
+        <div class="container px-4 px-lg-5">
+            <div class="bg-black text-center h-100 project">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <img class="img-fluid" src="startbootstrap-grayscale-gh-pages/assets/img/ciber.jpg"
+                        alt="ciberseguridad" loading="lazy" />
+                    <div class="col-lg-8">
+                        <br> <br>
+                        <h2 class="text-white mb-4">¿Qué es la ciberseguridad?</h2>
+                        <p class="text-white-50">La ciberseguridad es la práctica de proteger los sistemas informáticos,
+                            las redes y las aplicaciones de posibles ataques cibernéticos. Esto incluye la protección de datos,
+                            dispositivos y redes contra accesos no autorizados, robos de información y otros riesgos. La
+                            ciberseguridad también se conoce como seguridad informática o seguridad de la información
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Project One Row-->
-        <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-            <div class="col-lg-6">
-                <img class="img-fluid rounded" src="startbootstrap-grayscale-gh-pages/assets/img/ciber2.jpg" alt="ciberseguridad" loading="lazy" />
-            </div>
-            <div class="col-lg-6">
-                <div class="bg-black text-center h-100 project">
-                    <div class="d-flex h-100">
-                        <div class="project-text w-100 my-auto text-center text-lg-left">
-                            <h4 class="text-white">Medidas de ciberseguridad</h4>
-                            <ul>
-                                <li style="color: white">Actualización de software y sistemas operativos: mantener el software y los sistemas operativos actualizados es una de las formas más efectivas de prevenir ataques cibernéticos. Las actualizaciones suelen incluir parches de seguridad que corrigen vulnerabilidades conocidas.</li>
-                                <!-- Agrega los otros elementos de la lista -->
-                            </ul>
-                        </div>
+    </section>
+    <section class="about-section text-center" id="about2">
+        <div class="container px-4 px-lg-5">
+            <div class="bg-black text-center h-100 project" id="projects">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <img class="img-fluid rounded" src="startbootstrap-grayscale-gh-pages/assets/img/ciber4.jpg"
+                        alt="ciberseguridad" loading="lazy" />
+                    <div class="col-lg-8">
+                        <br> <br>
+                        <p class="text-white-50 mb-0">La ciberseguridad es fundamental en la era digital actual. Las empresas
+                            y las personas dependen cada vez más de la tecnología y la información en línea. Por lo tanto,
+                            proteger estos activos es esencial para garantizar la continuidad del negocio y la privacidad de los
+                            usuarios. La falta de seguridad y comprobar el correcto funcionamiento de las funciones miembro
+                            ciberseguridad puede resultar en pérdidas financieras, daños a la reputación y robos de información
+                            confidencial</p>
+                        <br> <br>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Project Two Row-->
-        <div class="row gx-0 justify-content-center">
-            <div class="col-lg-6">
-                <img class="img-fluid rounded" src="startbootstrap-grayscale-gh-pages/assets/img/ciber3.jpg" alt="ciberseguridad" loading="lazy" />
-            </div>
-            <div class="col-lg-6 order-lg-first">
-                <div class="bg-black text-center h-100 project">
-                    <div class="d-flex h-100">
-                        <div class="project-text w-100 my-auto text-center text-lg-right">
-                            <h4 class="text-white">Tipos de ataques cibernéticos</h4>
-                            <p class="mb-0 text-white-50">Existen diferentes tipos de ataques cibernéticos, incluyendo</p>
-                            <ul>
-                                <li style="color: white">Phishing: el phishing es una técnica en la que los atacantes intentan engañar a los usuarios para que revelen información confidencial, como contraseñas o números de tarjetas de crédito. Esto se hace a través de correos electrónicos, mensajes de texto o sitios web falsos.</li>
-                                <!-- Agrega los otros elementos de la lista -->
-                            </ul>
-                        </div>
+    </section>
+    <section class="about-section text-center" id="about3">
+        <div class="container px-4 px-lg-5">
+            <div class="bg-black text-center h-100 project">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <img class="img-fluid rounded" src="startbootstrap-grayscale-gh-pages/assets/img/ciber2.jpg"
+                        alt="ciberseguridad" loading="lazy" />
+                    <div class="col-lg-8">
+                        <br> <br>
+                        <h4 class="text-white">Medidas de ciberseguridad</h4>
+                        <ul>
+                            <li style="color: white">Actualización de software y sistemas operativos: mantener el software y
+                                los sistemas operativos actualizados es una de las formas más efectivas de prevenir ataques
+                                cibernéticos. Las actualizaciones suelen incluir parches de seguridad que corrigen
+                                vulnerabilidades conocidas</li>                            
+                        </ul>
+                        <br> <br>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-	<!-- Signup-->
-	<section class="signup-section" id="signup">
-		<div class="container px-4 px-lg-5"></div>
-	</section>
-	<!-- Contact-->
-	<section class="contact-section bg-black">
-		<div class="container px-4 px-lg-5">
-			<nav class="social d-flex justify-content-center">
-				<a class="mx-2" href="https://twitter.com/" aria-label="Twitter"><i
-					class="fab fa-twitter" aria-hidden="true"></i></a> <a class="mx-2"
-					href="https://www.facebook.com/" aria-label="Facebook"><i
-					class="fab fa-facebook-f" aria-hidden="true"></i></a> <a class="mx-2"
-					href="https://github.com/" aria-label="GitHub"><i
-					class="fab fa-github" aria-hidden="true"></i></a>
-			</nav>
-		</div>
-	</section>
-	<!-- Footer-->
-	<footer class="footer bg-black small text-center text-white-50">
-		<div class="container px-4 px-lg-5">Copyright &copy; Your
-			Website 2024</div>
-	</footer>
-	<!-- Bootstrap core JS-->
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-	<!-- Core theme JS-->
-	<script src="js/scripts.js"></script>
+    </section>
+    <section class="about-section text-center" id="about4">
+        <div class="container px-4 px-lg-5">
+            <div class="bg-black text-center h-100 project">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <img class="img-fluid rounded" src="startbootstrap-grayscale-gh-pages/assets/img/ciber3.jpg"
+                        alt="ciberseguridad" loading="lazy" />
+                    <div class="col-lg-8">
+                        <br> <br>
+                        <h4 class="text-white">Tipos de ataques cibernéticos</h4>
+                        <p class="mb-0 text-white-50">Existen diferentes tipos de ataques cibernéticos, incluyendo</p>
+                        <ul>
+                            <li style="color: white">Phishing: el phishing es una técnica en la que los atacantes intentan
+                                engañar a los usuarios para que revelen información confidencial, como contraseñas o números
+                                de tarjetas de crédito. Esto se hace a través de correos electrónicos, mensajes de texto o
+                                sitios web falsos</li>                            
+                        </ul>
+                        <br> <br>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Signup-->
+    <section class="signup-section" id="signup">
+        <div class="container px-4 px-lg-5"></div>
+    </section>
+    <!-- Contact-->
+    <section class="contact-section bg-black">
+        <div class="container px-4 px-lg-5">
+            <nav class="social d-flex justify-content-center">
+                <a class="mx-2" href="https://twitter.com/" aria-label="Twitter"><i class="fab fa-twitter"
+                        aria-hidden="true"></i></a> <a class="mx-2" href="https://www.facebook.com/"
+                    aria-label="Facebook"><i class="fab fa-facebook-f" aria-hidden="true"></i></a> <a class="mx-2"
+                    href="https://github.com/" aria-label="GitHub"><i class="fab fa-github" aria-hidden="true"></i></a>
+            </nav>
+            <br><br>
+        </div>
+    </section>
+    <!-- Footer-->
+    <footer class="footer bg-black small text-center text-white-50">
+        <div class="container px-4 px-lg-5">Copyright &copy; Your Website 2024</div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
 </body>
 </html>
