--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="description" content="Descripción de tu sitio web">
     <meta name="author" content="Autor del sitio web">
-    <meta name="viewport" content="width=device-width, initial-scale=max">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ciberseguridad</title>
     <link rel="icon" type="image/jpeg"
         href="https://static.vecteezy.com/system/resources/previews/003/184/374/original/cybersecurity-icon-online-data-protection-symbol-vector.jpg">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet">
     <!-- Utilizamos las versiones CDN de Bootstrap y FontAwesome para aprovechar la caché del navegador -->
+   
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js"
         crossorigin="anonymous"></script>
  <link href="css/styles.css" rel="stylesheet">
@@ -58,7 +59,7 @@
                         <p class="text-white-50">La ciberseguridad es la práctica de proteger los sistemas informáticos,
                             las redes y las aplicaciones de posibles ataques cibernéticos. Esto incluye la protección de datos,
                             dispositivos y redes contra accesos no autorizados, robos de información y otros riesgos. La
-                            ciberseguridad también se conoce como seguridad informática o seguridad de la información
+                            ciberseguridad también se conoce como seguridad informática o seguridad de la información.
                         </p>
                     </div>
                 </div>
@@ -78,7 +79,7 @@
                             proteger estos activos es esencial para garantizar la continuidad del negocio y la privacidad de los
                             usuarios. La falta de seguridad y comprobar el correcto funcionamiento de las funciones miembro
                             ciberseguridad puede resultar en pérdidas financieras, daños a la reputación y robos de información
-                            confidencial</p>
+                            confidencial.</p>
                         <br> <br>
                     </div>
                 </div>
@@ -98,7 +99,7 @@
                             <li style="color: white">Actualización de software y sistemas operativos: mantener el software y
                                 los sistemas operativos actualizados es una de las formas más efectivas de prevenir ataques
                                 cibernéticos. Las actualizaciones suelen incluir parches de seguridad que corrigen
-                                vulnerabilidades conocidas</li>                            
+                                vulnerabilidades conocidas.</li>                            
                         </ul>
                         <br> <br>
                     </div>
@@ -120,7 +121,7 @@
                             <li style="color: white">Phishing: el phishing es una técnica en la que los atacantes intentan
                                 engañar a los usuarios para que revelen información confidencial, como contraseñas o números
                                 de tarjetas de crédito. Esto se hace a través de correos electrónicos, mensajes de texto o
-                                sitios web falsos</li>                            
+                                sitios web falsos.</li>                            
                         </ul>
                         <br> <br>
                     </div>
